--- a/configure.ac
+++ b/configure.ac
@@ -294,7 +294,8 @@ AM_CONDITIONAL(DAGS, test `echo "$BRAND_OEM" | cut -b 1-4` == "dags")
 AM_CONDITIONAL(GIGABLUE, test `echo "$BRAND_OEM"` == "gigablue")
 AM_CONDITIONAL(ODIN, test `echo "$BRAND_OEM" | cut -b 1-4` == "odin")
 AM_CONDITIONAL(MIRACLEBOX, test `echo "$BOXTYPE" | cut -b 1-2` == "mb")
-AM_CONDITIONAL(INI, test `echo "$BRAND_OEM" | cut -b 1-3` == "ini")
+AM_CONDITIONAL(ini-9000de, test `echo "$BRAND_OEM" | cut -b 1-3` == "GI")
+AM_CONDITIONAL(ini-8000am, test `echo "$BRAND_OEM" | cut -b 1-3` == "Atemio")
 AM_CONDITIONAL(XP, test `echo "$BRAND_OEM"` == "xp")
 AM_CONDITIONAL(SKYLAKE, test `echo "$BRAND_OEM"` == "skylake")
 AM_CONDITIONAL(FORMULER, test `echo "$BRAND_OEM"` == "formuler")
