--- a/configure.ac
+++ b/configure.ac
@@ -154,7 +154,7 @@ AC_ARG_WITH(machinebrand,
 AC_SUBST(MACHINE_BRAND)
 AC_DEFINE_UNQUOTED(MACHINE_BRAND,"$MACHINE_BRAND",[machine name])
 
-AC_ARG_WITH(machinexpeedlx3
+AC_ARG_WITH(machinexpeedlx3,
 	[  --with-machinexpeedlx3=NAME brand name [[Vu,Xtrend,...]]],
 	[MACHINE_BRAND="$withval"],[MACHINE_BRAND="GI"])
 AC_SUBST(MACHINE_BRAND)
