--- a/configure.ac
+++ b/configure.ac
@@ -262,6 +262,11 @@ AC_ARG_WITH(driverdate,
 AC_SUBST(DRIVERDATE)
 AC_DEFINE_UNQUOTED(DRIVERDATE,"$DRIVERDATE",[driver date])
 
+AC_ARG_WITH(rcidnum,
+	[  --with-rcidnum=NUMBER rc id number [[2,...]]],
+	[RCIDNUM="$withval"],[RCIDNUM=""])
+AC_SUBST(RCIDNUM)
+AC_DEFINE_UNQUOTED(RCIDNUM,"$RCIDNUM",[rc id number])
 
 AC_ARG_WITH(debug,
 	AS_HELP_STRING([--without-debug],[disable debugging code]),
