--- a/configure.ac
+++ b/configure.ac
@@ -280,6 +280,12 @@ AC_ARG_WITH(rcname,
 AC_SUBST(RCNAME)
 AC_DEFINE_UNQUOTED(RCNAME,"$RCNAME",[rc name])
 
+AC_ARG_WITH(dboxlcd,
+	[  --with-dboxlcd=NAME dboxlcd [[dboxlcd......]]],
+	[SUPPORT_DBOXLCD="$withval"],[SUPPORT_DBOXLCD="True"])
+AC_SUBST(SUPPORT_DBOXLCD)
+AC_DEFINE_UNQUOTED(SUPPORT_DBOXLCD,"$SUPPORT_DBOXLCD",[dboxlcd])
+
 AC_ARG_WITH(debug,
 	AS_HELP_STRING([--without-debug],[disable debugging code]),
 	[with_debug="$withval"],[with_debug="yes"])
